before adding the logic

--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-   
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="selections">
+    <button class="selection"><img src="pictures/rock.png" height ="110" width="140" alt="Rock"></button>
+    <button class="selection"><img src="pictures/paper.png" height ="110" width="140" alt="Paper"></button>
+    <button class="selection"><img src="pictures/scissor.png" height ="110" width="140" alt="Scissor"></button>
+    </div>
+
+    <div class="results">
+        <div>
+            You
+            <span class="result-score">0</span>
+        </div>
+        <div>
+            Computer
+            <span class="result-score">0</span>
+        </div>
+        <div class="result-selection winner">😝</div>
+        <div class="result-selection ">😊</div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
